Hooking up Java echo into main functioned app Removed "trialDuration" flag from go and didn't add to java -- we will control timing using either timeout or docker directives. java signal handling is a pain.  It's hard-coded in java that on System.exit, SIGTERM, or SIGINT it begins the "shutdown procedure" which runs any hooks that you register in new threads and once those complete the process halts. Add to this that "gradle run" swallows signals (it believes that the signal is intended for gradle, not the process it's managing) and it all could be more user friendly
No benchmarking yet.